# dialbb

./: .gitignore  .python-version  Changelog-ja.md  Changelog.md  LICENSE  LICENSE-en  MANIFEST.in  README-PyPI.md  README-en.md  README-ja.md  README.md  dialbb.service  index-ja.html  pyproject.toml  requirements.txt  requirements3.7.txt  run_server.py  zip-sample-apps.sh
.github/workflows/: docs-build-deploy.yml
dialbb/: #server.py#  abstract_block.py  main.py  paths.py  uninstall.py
dialbb/builtin_blocks/: util.py
dialbb/builtin_blocks/chatgpt/: chatgpt.py  chatgpt_en.py  chatgpt_ja.py
dialbb/builtin_blocks/chatgpt_mp/: chatgpt_mp.py
dialbb/builtin_blocks/dst_with_llm/: __init__.py  dst_with_llm.py  knowledge_converter.py  prompt_template_en.py  prompt_template_ja.py
dialbb/builtin_blocks/llm_dialogue/: __init__.py  llm_dialogue.py  llm_selector.py
dialbb/builtin_blocks/ner_with_chatgpt/: chatgpt_ner.py  knowledge_converter.py  ne_recognizer.py  prompt_template_en.py  prompt_template_ja.py
dialbb/builtin_blocks/ner_with_spacy/: ne_recognizer.py
dialbb/builtin_blocks/passage_retrieval/: __init__.py  passage_retrieval.py
dialbb/builtin_blocks/preprocess/: abstract_canonicalizer.py  japanese_canonicalizer.py  simple_canonicalizer.py  utterance_canonicalizer.py
dialbb/builtin_blocks/stn_management/: __init__.py  builtin_scenario_functions.py  context_db.py  scenario_graph.py  state_transition_network.py  stn_creator.py  stn_manager.py  util.py
dialbb/builtin_blocks/tokenization/: abstract_tokenizer.py  sudachi_tokenizer.py  (+1 more)
dialbb/multimodal/: .gitignore  PHASE2_API.md  README.md  __init__.py  core.py  engine.py  server.py  start_mm_client.py
dialbb/no_code/: .gitignore  README.md  config_editor.py  config_mng.py  constants.py  editor_main.py  function_editor.py  gui_nc_text.yml  gui_utils.py  install_editor_gui.py  main.py  remove_files.py  start_editor.py
dialbb/pyeditor/: constants.py  node_checks.py  scenario_editor.py
dialbb/schemata/: init_request.jsd
dialbb/server/: run_server.py
dialbb/sim_tester/: chatgpt_tester.py  llm_tester.py  main.py  test_with_dialbb_app.py  test_with_llm.py
dialbb/util/: builtin_block_utils.py  context_db.py  error_handlers.py  globals.py  logger.py  send_test_request.py  send_test_requests.py  test.py
docs/: index-ja.html  index.html  style.css
docs/AWS/: index.html  index.md
docs/document-ja/: requirements.txt
docs/files/: dialbb-1.2.0-py3-none-any.whl
docs/images/: chatgpt-dialogue-arch-en.drawio  chatgpt-dialogue-arch-ja.drawio  dialbb-arch.drawio  dst_stn_ja_arch.drawio  llm-dialogue-arch-en.drawio  llm-dialogue-arch-ja.drawio  parrot-arch-en.drawio  rag-arch-en.drawio  rag-arch-ja.drawio  sample-arch-en.drawio  sample-arch-with-knowledge.drawio  sample-arch.drawio  stn-ja.drawio
docs/no-code/: index-ja.html  index-ja.md  index.html
docs/no-code-tools/: dialbb-no-code-tool-document-ja.md
docs/old-docs/: index-ja.html  index.html
document-en/source/: 04_framework.md  conf.py  index.rst
document-ja/source/: 03_tutorial.md  04_framework.md  05_builtin_blocks.md  06_appendix.md  conf.py  index.rst
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
images/: chatgpt-dialogue-arch-ja.drawio  dialbb-arch-en.drawio  dst_stn_en_arch.drawio  parrot-arch-ja.drawio  simple-app-arch-en.drawio  simple-app-arch-ja.drawio  stn-en.drawio  stn-ja.drawio
mm_client/mm_client/: .gitignore  README.md  __init__.py  start_mm_client.py
no-code/: index-ja.html  index-ja.md
old-docs/: index-ja.html
sample_apps/chatgpt/: config_en.yml  config_ja.yml  prompt_template_en.txt  prompt_template_ja.txt  requirements.txt
sample_apps/discourse/: README.md  config.yml
sample_apps/dst_stn_en/: config.yml  dst_knowledge_en.xlsx  dst_stn_en_senario.xlsx  test_requests.json
sample_apps/dst_stn_ja/: config.yml  config_context_db.yml  dst_knowledge_ja.xlsx  dst_stn_ja_scenario.xlsx
sample_apps/lab_app_en/: config.yml  lab_app_en_knowledge.xlsx  lab_app_nlu_knowledge_en.xlsx  lab_app_scenario_en.xlsx  requirements.txt  scenario_functions.py
sample_apps/lab_app_ja/: README.md  config.yml  config_context_db.yml  config_mp.yml  lab_app_ja_knowledge.xlsx  lab_app_ner_knowledge_ja.xlsx  lab_app_nlu_knowledge_ja.xlsx  lab_app_scenario_ja.xlsx  requirements.txt  scenario_functions.py  test_requests.json
sample_apps/llm_dialogue/: config_en.yml  config_ja.yml  prompt_template_ja.txt
sample_apps/llm_dialogue_en/: config.yml  prompt_template.txt
sample_apps/llm_dialogue_ja/: config.yml
sample_apps/mp_chatgpt/: README.md  config1.yml  config2.yml  config3.yml  mp_config.yml  mp_config_all_ai.yml  requirements.txt
sample_apps/network_en/: config.yml  requirements.txt  sample-knowledge-en.xlsx  scenario_functions.py  test_inputs.json  test_inputs.txt
sample_apps/network_ja/: config.yml  config_gs_template.yml  dictionary_functions.py  requirements.txt  sample-knowledge-ja.xlsx  scenario_functions.py  test_inputs.json  test_inputs.txt
sample_apps/parrot/: config.yml  parrot.py
sample_apps/rag_en/: config.yml  prompt_template.txt
sample_apps/rag_ja/: config.yml  prompt_template.txt
sample_apps/simple_en/: config.yml  config_gs_template.yml  requirements.txt  scenario_functions.py  simple-nlu-knowledge-en.xlsx  simple-scenario-en.xlsx
sample_apps/simple_ja/: config.yml  config_gs_template.yml  requirements.txt  scenario_functions.py  simple-nlu-knowledge-ja.xlsx  simple-scenario-ja.xlsx  test_inputs.txt
schemata/: dialogue_request.jsd
scripts/: zip-dialbb-setup.bat  zip-dialbb-setup.sh  zip-dialbb.sh  zip-documents.bat  zip-documents.sh  zip-sample-apps.bat  zip-sample-apps.sh
setup-files/: README.txt  install.bat  start-dialbb-nc.bat
sim_tester/: README-ja.md  main.py
sim_tester/sample_ja/: config.yml  prompt_template1.txt  prompt_template2.txt  task.txt
sim_tester_samples/: README-ja.md
sim_tester_samples/sample_ja/: config.yml  prompt_template1.txt  prompt_template2.txt
static/new/: index.html  test.html
(+205 files in other folders)
