[tool.poetry]
name = "dialbb-nc"
version = "0.1.13"
description = "Dialogue system development framework no-code."
authors = ["Mikio Nakano <mikio.nakano@c4a.jp>"]
readme = "README.md"

packages = [
    { include = "dialbb" }
]
include = [
]
exclude = [
    "dialbb/builtin_blocks/stn_management/gui_editor/",
    "**/__pycache__/"
]


[tool.poetry.dependencies]
#python = ">=3.8,<4.0"
python = ">=3.8,<3.12"
annotated-types = "0.7.0"
anyio = "4.4.0"
attrs = "23.2.0"
blinker = "1.8.2"
blis = "0.7.11"
cachetools = "5.3.3"
catalogue = "2.0.10"
certifi = "2024.7.4"
charset-normalizer = "3.3.2"
click = "8.1.7"
cloudpathlib = "0.18.1"
colorama = "0.4.6"
confection = "0.1.5"
cryptography = "43.0.0"
curated-tokenizers = "0.0.9"
curated-transformers = "0.1.1"
cymem = "2.0.8"
distro = "1.9.0"
en-core-web-lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.6.0/en_core_web_lg-3.6.0.tar.gz"}
et-xmlfile = "1.1.0"
exceptiongroup = "1.2.1"
filelock = "3.15.4"
Flask = "3.0.3"
fsspec = "2024.6.1"
ginza-transformers = "0.4.2"
ginza = "5.2.0"
google-auth-oauthlib = "1.2.1"
google-auth = "2.32.0"
gspread = "6.1.2"
h11 = "0.14.0"
httpcore = "1.0.5"
httplib2 = "0.22.0"
httpx = "0.27.0"
huggingface-hub = "0.23.4"
idna = "3.7"
importlib-metadata = "6.8.0"
importlib-resources = "6.1.1"
itsdangerous = "2.2.0"
ja-ginza-electra = "5.2.0"
jaconv = "0.3.4"
Jinja2 = "3.1.4"
joblib = "1.4.2"
jsonschema-specifications = "2023.12.1"
jsonschema = "4.23.0"
langcodes = "3.4.0"
language_data = "1.2.0"
logzero = "1.7.0"
marisa-trie = "1.2.0"
markdown-it-py = "3.0.0"
MarkupSafe = "2.1.5"
mdurl = "0.1.2"
mpmath = "1.3.0"
murmurhash = "1.0.10"
networkx = "3.1"
nltk = "3.8.1"
numpy = "1.24.4"
nvidia-cublas-cu12 = "12.1.3.1"
nvidia-cuda-cupti-cu12 = "12.1.105"
nvidia-cuda-nvrtc-cu12 = "12.1.105"
nvidia-cuda-runtime-cu12 = "12.1.105"
nvidia-cudnn-cu12 = "8.9.2.26"
nvidia-cufft-cu12 = "11.0.2.54"
nvidia-curand-cu12 = "10.3.2.106"
nvidia-cusolver-cu12 = "11.4.5.107"
nvidia-cusparse-cu12 = "12.1.0.106"
nvidia-nccl-cu12 = "2.20.5"
nvidia-nvjitlink-cu12 = "12.5.82"
nvidia-nvtx-cu12 = "12.1.105"
oauth2client = "4.1.3"
oauthlib = "3.2.2"
openai = "1.35.13"
openpyxl = "3.1.5"
packaging = "24.1"
pandas = "2.0.3"
pathlib-abc = "0.1.1"
pathy = "0.11.0"
pkgutil-resolve-name = "1.3.10"
plac = "1.4.3"
preshed = "3.0.9"
pyasn1-modules = "0.4.0"
pyasn1 = "0.6.0"
pydantic = "2.8.2"
pydantic-core = "2.20.1"
Pygments = "2.18.0"
pyparsing = "3.1.2"
python-crfsuite = "0.9.10"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
PyYAML = "6.0.1"
referencing = "0.35.1"
regex = "2024.5.15"
requests-oauthlib = "2.0.0"
requests = "2.32.3"
rich = "13.7.1"
rpds-py = "0.19.0"
rsa = "4.9"
ruamel-yaml = "^0.18.6"
scikit-learn = "1.3.2"
scipy = "1.10.1"
shellingham = "1.5.4"
six = "1.16.0"
sklearn-crfsuite = "0.5.0"
smart-open = "6.4.0"
sniffio = "1.3.1"
spacy = "3.6.1"
spacy-alignments = "0.9.1"
spacy-legacy = "3.0.12"
spacy-loggers = "1.0.5"
spacy-transformers = "1.1.9"
srsly = "2.4.8"
strenum = "0.4.15"
SudachiDict-core = "20240409"
SudachiPy = "0.6.8"
SudachiTra = "0.1.9"
sympy = "1.13.0"
tabulate = "0.9.0"
thinc = "8.1.12"
threadpoolctl = "3.5.0"
tokenizers = "0.13.3"
torch = "2.3.1"
tqdm = "4.66.4"
transformers = "4.25.1"
triton = "2.3.1"
typer = "0.9.0"
typing_extensions = "4.12.2"
tzdata = "2024.1"
urllib3 = "2.2.2"
wasabi = "1.1.3"
weasel = "0.4.1"
Werkzeug = "3.0.3"
wrapt = "1.16.0"
zipp = "3.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
dialbb-nc = 'dialbb.no_code.main:main'
dialbb-server = 'dialbb.server.run_server:start_dialbb_cmd'
